# Version 0.4.0

2006-08-01  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore,
	* po/.cvsignore: updated
	* Makefile.am,
	* data/Makefile.am: distcheck fixes
	* autogen.sh: updated, uses newer automake
	* configure.in: updated for 0.4.0; added gnome-doc-utils; fix libtool; 
	* NEWS: updated
	* help/C/Makefile.am,
	* help/Makefile.am,
	* help/fr/Makefile.am,
	* help/fr/fr.po,
	* help/fr/monkey-bubble.xml,
	* help/monkey-bubble.omf.in,
	* help/omf.make,
	* help/xmldocs.make: migrated the documentation system to use
	gnome-doc-utils
	* po/POTFILES.in: updated

2006-08-01  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/audio/sound-manager.c: fix music restart 

2006-07-30  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: require GTK+ 2.10
	* data/monkey-bubble.glade: insert the preferences into the game menu
	* src/ui/Makefile.am: updated
	* src/ui/update-from-egg.sh,
	* src/ui/eggaccelerators.c,
	* src/ui/eggaccelerators.h,
	* src/ui/eggcellrendererkeys.c,
	* src/ui/eggcellrendererkeys.h: removed old libegg code
	* src/ui/keyboard-properties.c: updated to new GTK+ code
	* src/view/monkey-canvas.c: fixed error messages (Erreur)

2006-06-26  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/eggcellrendererkeys.c,
	* src/ui/ui-network-client.c,
	* src/ui/ui-network-server.c: fixed gcc 4.1 warnings (patch from
	Michael J. Knox)

2006-06-21  Raivis Dejus  <orvils@gmail.com>

	* configure.in	Added lv in ALL_LINGUAS line.

2006-06-14  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: depend on GStreamer 0.10
	* src/audio/sound-manager.c: use GStreamer 0.10

2006-03-21  Sven Herzberg  <herzi@gnome-de.org>

	* src/net/client.c,
	* src/net/game-manager-proxy.c,
	* src/net/game-manager.c,
	* src/net/simple-server.c,
	* src/ui/game-network-player-manager.c,
	* src/ui/ui-network-client.c,
	* src/ui/ui-network-server.c: fixed gcc 4 warnings (based upon
	a patch from Michael Knox)

2006-02-05  Clytie Siddall <clytie@riverland.net.au>
