@@ -12,6 +12,7 @@ AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
 DISTCHECK_CONFIGURE_FLAGS="--disable-schemas-install --disable-scrollkeeper"
+DISTCHECK_CONFIGURE_FLAGS+=" --disable-setgid"
 AC_SUBST(DISTCHECK_CONFIGURE_FLAGS)
 
 dnl --------------------------------------------------------------------------
@@ -144,7 +145,31 @@ AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "$PACKAGE_LOCALE_DIR",
 	[The directory in which gphpedit's locale data will be stored])
 AC_MSG_RESULT($PACKAGE_LOCALE_DIR)
 
-dnl --------------------------------------------------------------------------
+dnl  -------------------
+dnl | highscore support |-----------------------------------------------------
+dnl  -------------------
+
+AC_ARG_ENABLE(setgid,
+		[  --disable-setgid           Disable the use of setgid binaries],
+		[case "${enableval}" in
+		  yes) setgid=true ;;
+		  no)  setgid=false ;;
+		  *) AC_MSG_ERROR([bad value ${enableval} for --disable-setgid]) ;;
+		 esac], [setgid=true])
+AC_SUBST(setgid)
+
+AC_ARG_WITH(scores-group,
+		[  --with-scores-group=group  Group for the high score tables and binaries],
+		scores_group="${withval}",scores_group="games")
+AC_SUBST(scores_group)
+
+AC_ARG_WITH(scores-user,
+		[  --with-scores-user=user    User for the high score tables and binaries],
+		scores_user="${withval}",scores_user="games")
+AC_SUBST(scores_user)
+
+scoredir='${localstatedir}/games'
+AC_SUBST(scoredir)
 
 dnl  --------
 dnl | output |----------------------------------------------------------------
